# banzai-floyds

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: unit_tests.yml
banzai_floyds/: arc_lines.py  cosmics.py  extract.py  frames.py  main.py  matched_filter.py  orders.py  settings.py  traces.py  wavelengths.py
banzai_floyds/.github/workflows/: unit_tests.yml
banzai_floyds/tests/: test_e2e.py  test_extract.py  test_orders.py  test_settings.py  test_utils.py  test_wavelengths.py
banzai_floyds/tests/data/: configdb.json
banzai_floyds/utils/: fitting_utils.py  order_utils.py  wavelength_utils.py
docs/: conf.py  index.rst
docs/banzai_floyds/: index.rst
helm-chart/banzai-floyds/: Chart.yaml  values-prod.yaml
helm-chart/banzai-floyds-e2e/: Chart.yaml  values.yaml
helm-chart/banzai-floyds-e2e/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
helm-chart/banzai-floyds-e2e/templates/tests/: test-connection.yaml
helm-chart/banzai-floyds/templates/: NOTES.txt  _helpers.tpl  db-instrument-update.yaml  listener.yaml  workers-hpa.yaml
helm-chart/banzai-floyds/templates/tests/: test-connection.yaml
licenses/: LICENSE.rst
