[metadata]
name = banzai_floyds
author = cmccully
author_email = cmccully@lco.global
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://banzai-floyds.readthedocs.io/
description = BANZAI Data Reduction for FLOYDS spectra
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = lcogt/banzai-floyds

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy >= 4.3
    banzai @ git+https://github.com/lcogt/banzai.git@1.9.6
    astroscrappy
    matplotlib
;    banzai-nres @ git+https://github.com/lcogt/banzai-nres.git@1.0.16

[options.extras_require]
test =
    pytest-astropy
    mock
docs =
    sphinx-astropy

[options.entry_points]
console_scripts =
    banzai_floyds_run_realtime_pipeline=banzai_floyds.main:floyds_run_realtime_pipeline

[options.package_data]
banzai_floyds =
    data/*
    tests/data/*

[tool:pytest]
testpaths = "banzai_floyds" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    banzai_floyds/_astropy_init*
    banzai_floyds/conftest.py
    banzai_floyds/*setup_package*
    banzai_floyds/tests/*
    banzai_floyds/*/tests/*
    banzai_floyds/extern/*
    banzai_floyds/version*
    */banzai_floyds/_astropy_init*
    */banzai_floyds/conftest.py
    */banzai_floyds/*setup_package*
    */banzai_floyds/tests/*
    */banzai_floyds/*/tests/*
    */banzai_floyds/extern/*
    */banzai_floyds/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
